--- a/style.css
+++ b/style.css
@@ -5,8 +5,6 @@
      --black:#212832
 }
 *,
-*::after
-*::before
 {
  box-sizing: border-box;   
 }
@@ -18,13 +16,83 @@ body{
     max-width: 1134px;
     margin: 0 auto;
 }
+/* Header */
+header{
+opacity: 0.9;
+background: url(Images/Beach.png), lightgray 50% / cover no-repeat;
+background-size: cover;
+background-position: center;
+width: 100vw;
+height: 100vh;
+display:flex;
+position:relative;
+overflow: hidden;
+@media (max-width: all)
+
+}
+.left{
+    h1{
+        width: 1108px;
+height: 89px;
+flex-shrink: 0;
+        color: #4B40C5;
+font-family: Poppins;
+font-size: 48px;
+font-style: normal;
+font-weight: 700;
+line-height: 118.381px; /* 246.627% */
+letter-spacing: -1.92px;
+    }
+    h3{
+        width: 757px;
+height: 47px;
+flex-shrink: 0;
+        color: #FFF;
+font-family: Poppins;
+font-size: 32px;
+font-style: normal;
+font-weight: 700;
+line-height: normal;
+text-transform: uppercase;
+    }
+
+}
+
 /* Buttons */
 .btnOrange
 {
+    display: flex;
+width: 107px;
+height: 40px;
+padding: 8px 20px;
+justify-content: center;
+align-items: center;
+gap: 8px;
+flex-shrink: 0;
+border-radius: 8px;
+border: 1px solid var(--orange);
+background:var(--orange);
 
 }
 .btnOrange1
 {
-
+display: inline-flex;
+height: 40px;
+padding: 8px 20px;
+justify-content: center;
+align-items: center;
+gap: 8px;
+flex-shrink: 0;
+border-radius: 8px;
+border: 1px solid var(--orange);
+background: var(--orange);
+box-shadow: 0px;
 }
-/* Header */
+.btnBlueviolet{
+    border-radius: 13.301px;
+background: #4B40C5;
+box-shadow: 0px 26.60243034362793px 46.55425262451172px 0px rgba(241, 165, 1, 0.15);
+width: 228.01px;
+height: 75.882px;
+flex-shrink: 0;
+}
