--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     --blueviolet:#4B40C5;
     --orange:#EC682C;
     --white: #FFFFFF;
-     --black:#212832
+    --black: #212832;
 }
 *,
 *::after
